bk_ida/gccida/g0/alloc_gcse_mem
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/alloc_gcse_mem/src/gcse.c:1461:1: error: use of undeclared identifier 'max_uid_0'; did you mean 'max_uid'?
max_uid_0 = get_max_uid( ); 
^~~~~~~~~
max_uid
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/alloc_gcse_mem/src/gcse.c:386:12: note: 'max_uid' declared here
static int max_uid;
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/alloc_gcse_mem/src/gcse.c:1462:11: error: use of undeclared identifier 'max_uid_0'; did you mean 'max_uid'?
n = 4 * ( max_uid_0 + 1); 
          ^~~~~~~~~
          max_uid
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/alloc_gcse_mem/src/gcse.c:386:12: note: 'max_uid' declared here
static int max_uid;
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/alloc_gcse_mem/src/gcse.c:1463:1: error: use of undeclared identifier 'uid_cuid_1'; did you mean 'uid_cuid'?
uid_cuid_1 = gmalloc( n); 
^~~~~~~~~~
uid_cuid
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/alloc_gcse_mem/src/gcse.c:383:13: note: 'uid_cuid' declared here
static int *uid_cuid;
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/alloc_gcse_mem/src/gcse.c:1464:9: error: use of undeclared identifier 'uid_cuid_1'; did you mean 'uid_cuid'?
memset( uid_cuid_1, 0, n); 
        ^~~~~~~~~~
        uid_cuid
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/alloc_gcse_mem/src/gcse.c:383:13: note: 'uid_cuid' declared here
static int *uid_cuid;
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/alloc_gcse_mem/src/gcse.c:1472:15: error: use of undeclared identifier 'uid_cuid_1'
*( ( _DWORD *)uid_cuid_1 + insn->fld[0].rtint) = v1; 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/alloc_gcse_mem/src/gcse.c:1476:15: error: use of undeclared identifier 'uid_cuid_1'
*( ( _DWORD *)uid_cuid_1 + insn->fld[0].rtint) = i; 
              ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/alloc_gcse_mem/src/obj/gcse.o] Error 1
